[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["day-*"]

[workspace.dependencies]
aoc = { path = ".", version = "0.1.0" }

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
owo-colors = "3.5.0"
